webDisplaySerial/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}
body {
  min-width: 340px;
}
h4 {
  padding: 0 0 0 10px;
  font-size: 22px;
  transition: 1s;
}

a,
a:hover,
a:active,
a:visited {
  color: inherit;
  text-decoration: none;
}

.display {
  height: 100vh;
  padding: 5vh 0 0 0;
  width: 100vw;
  background-color: rgb(27, 5, 51);
  color: white;
}
.wrapper {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  margin: auto;
}
.header-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: center;
  position: relative;
}
.container-ino {
  padding: 40px;
}
.status {
  height: 14px;
  width: 14px;
  border: 1px solid rgb(120, 200, 90);
  background-color: rgb(120, 200, 90);
  border-radius: 10px;
  position: absolute;
  left: 84px;
  top: 50%;
  cursor: help;
  transform: translateY(-50%);
  transition: 0.8s;
}
.text-header {
  text-align: center;
  padding: 10px;
  transition: 1s;
}
.toggle {
  height: 0;
  width: 0;
  visibility: hidden;
}

label {
  cursor: pointer;
  text-indent: -9999px;
  width: 40px;
  height: 20px;
  background-color: rgb(44, 15, 77);
  display: block;
  border-radius: 100px;
  position: absolute;
  top: 50%;
  right: 16.6px;
  transform: translateY(-50%);
  transition: 0.36s;
}

label:after {
  content: "";
  position: absolute;
  top: 3px;
  left: 4px;
  width: 14px;
  height: 14px;
  background-color: rgb(87, 87, 87);
  border-radius: 90px;
  transition: 0.36s;
}
.status-disable label {
  background-color: rgba(84, 88, 88, 0.2);
}
.status-disable label:hover {
  background-color: rgb(44, 15, 77);
}
.status-disable label:after {
  background: rgb(44, 44, 44);
}
.status-disable label:hover:after {
  background: rgb(87, 87, 87);
}
.toggle:checked + label:after {
  left: calc(100% - 4px);
  transform: translateX(-100%);
}

.serial-message {
  padding: 10px 0;
}
.wrapper-input-btn {
  display: inline-flex;
  justify-content: center;
  width: 100%;
  padding: 10px 0;
}
.sm-input {
  font-size: 18px;
  border: 1px solid rgb(27, 5, 51);
  outline: none;
  border-radius: 10px;
  flex-grow: 4;
  padding: 10px 12px;
  margin-right: 10px;
  color: rgb(234, 247, 255);
  background-color: rgba(242, 249, 250, 0.2);
  transition: 1s;
}
.sm-input:focus {
  border: 1px solid rgb(238, 206, 119);
}
.sm-btn {
  flex-grow: 2;
  outline: none;
  font-size: 18px;
  border: 1px solid rgb(120, 200, 90);
  border-radius: 10px;
  color: rgb(120, 200, 90);
  background-color: transparent;
  cursor: pointer;
  transition: 1s;
}
.sm-btn:hover {
  background-color: rgb(120, 200, 90);
  color: white;
  transition: 0.1s;
}
span.time {
  color: rgb(79, 189, 233);
  font-size: 14px;
  width: min-content;
}
.wrapper-textarea {
  background-color: rgba(242, 249, 250, 0.2);
  height: 60vh;
  width: 370px;
  min-width: 340px;
  padding: 24px;
  position: relative;
  border: 1px solid rgb(27, 5, 51);
  border-radius: 20px;
  margin-top: 20px;
  transition: color 1s ease, background-color 1s ease;
}
div.textarea {
  font-size: 18px;
  color: rgb(238, 206, 119);
  background-color: transparent;
  height: 100%;
  width: 322px;
  overflow: scroll;
  transition: 1s;
  overflow: hidden;
}
.status-disable input,
.status-disable .wrapper-textarea {
  background-color: rgba(84, 88, 88, 0.2);
  cursor: default;
}

.status-disable {
  color: rgb(62, 56, 68);
  cursor: default;
}
.status-disable button,
.status-disable button:hover {
  background-color: transparent;
  color: rgb(62, 56, 68);
  border: 1px solid rgb(62, 56, 68);
  cursor: default;
}

.status-disable .status {
  color: red;
  border: 1px solid red;
  background-color: red;
}

.cover {
  height: 0;
  width: 0;
  background-color: inherit;
  overflow: hidden;
  display: flex;
  justify-content: center;
}
.cover_active {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100vw;
  z-index: 1;
  padding-top: 100px;
}
.cover-text {
  color: white;
  font-size: 36px;
  z-index: 2;
  text-align: center;
}
.fullscreen {
  height: 72vh;
  width: 72vw;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 2;
  background-color: rgb(69, 53, 88);
}

.btn-fullscreen button {
  padding: 0 4px 2px 4px;
  position: absolute;
  bottom: 8px;
  right: 8px;
  border: 0 solid red;
  color: rgb(120, 200, 90);
  background-color: transparent;
  font-size: 16px;
  outline: none;
  cursor: pointer;
  transition: color 1s ease;
}

.status-disable .btn-fullscreen button {
  color: rgb(62, 56, 68);
  outline: none;
  cursor: default;
  border: 0 solid red;
}
.footer {
  display: flex;
  justify-content: center;
}
.footer a {
  user-select: none;
  -webkit-user-select: none;
  cursor: default;
}
.footer h6 {
  font-size: 12px;
  color: rgba(128, 128, 128, 0.5);
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
  text-align: center;
  letter-spacing: 2px;
  user-select: none;
  -webkit-user-select: none;
  transition: color 2.0s ease-in;
}
.footer h6:hover {
  color: sandybrown;
  transition: color 0.8s ease;
}
.em {
  font-size: 16px;
}
@media only screen and (max-width: 1299px) {
  .wrapper {
    display: flex;
    flex-direction: column;
    margin: auto;
    width: 470px;
  }
  .display {
    height: auto;
  }
}

@media only screen and (max-width: 640px) {
  .cover-text {
    font-size: 20px;
  }
}

